Overflow issue fixed

--- a/public/style.css
+++ b/public/style.css
@@ -110,6 +110,8 @@ p{
 .panel {
   width: 100%;
   height: 100%;
+  position: relative;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
